@@ -3,3 +3,4 @@ pkg
 tmp
 doc
 Manifest*
+*.sqlite3
