@@ -5,11 +5,11 @@ require 'ludy/symbol/to_proc' if RUBY_VERSION < '1.9.0'
 
 class TestProc < Test::Unit::TestCase
   def test_bind
-    assert_equal [9,8,7], ([1,2,3].map(&lambda{|lhs, rhs| lhs-rhs}.bind(10, :_1)))
-    assert_equal [3,2,1], (lambda{|a,b,c| [a,b,c]}.bind :_3, :_2, :_1)[1,2,3]
-    assert_equal [1,9,3], (lambda{|a,b,c| [a,b,c]}.bind :_1, 9, :_3)[1,2,3]
-    assert_equal [9,2,3], (lambda{|a,b,c| [a,b,c]}.bind 9)[2,3]
-    assert_equal [9,4,2], (lambda{|a,b,c| [a,b,c]}.bind 9, :_3)[2,3,4]
+    assert_equal [9,8,7], ([1,2,3].map(&lambda{|lhs, rhs| lhs-rhs}._bind(10, :_1)))
+    assert_equal [3,2,1], (lambda{|a,b,c| [a,b,c]}._bind :_3, :_2, :_1)[1,2,3]
+    assert_equal [1,9,3], (lambda{|a,b,c| [a,b,c]}._bind :_1, 9, :_3)[1,2,3]
+    assert_equal [9,2,3], (lambda{|a,b,c| [a,b,c]}._bind 9)[2,3]
+    assert_equal [9,4,2], (lambda{|a,b,c| [a,b,c]}._bind 9, :_3)[2,3,4]
   end
   def test_curry
     multiply = lambda{|l,r| l*r}
